# cloud-sync

./: .env.template  .gitignore  README.md  cloud_sync-0.1.0-py3-none-any.whl  cloud_sync-1-py3-none-any.whl  cloud_sync-1.0.0-py3-none-any.whl  loader.py  poe.toml  pyproject.toml
cloud_sync/: boot_message.py  curlify.py  get_access_token.py  get_zivver_api_key.py  get_zivver_api_url.py  main.py
cloud_sync/actions/: make_actions.py  make_diff.py  show.py
cloud_sync/actions/make/: make_create.py  make_update.py
cloud_sync/api/: do_creates.py  do_updates.py  get_exo_mailbox.py  get_exo_mailbox_permission.py  get_scim_groups.py  get_scim_ids.py  get_scim_users.py  make_httpx_client.py
cloud_sync/exchange/: get_delegations.py  get_exo_accounts.py  prune.py
cloud_sync/models/: __init__.py  account.py  email_address.py
cloud_sync/models/actions/: create_action.py  (+1 more)
cloud_sync/scim/: get_scim_accounts.py
cloud_sync/settings/: settings.py
docs/: getExoMailbox.json  getExoMailboxPermission.json  getExoMailboxPermissions.json  get_mailbox_permissions.raw.txt  investigate_getexom.ps1  investigate_getexom.py  powershell_subprocess.py
tests/: conftest.py
tests/assets/: 2024-06-21_exo_mailboxes.json  2024-06-21_exo_permissions.json  2024-06-21_zivver_org_scim_groups.json  2024-06-21_zivver_org_scim_users.json
tests/bdd/: claimed_domains.py  create_exo_sharedmailbox.py  create_exo_usermailbox.py  create_scim_group.py  create_scim_user.py  do_actions.py  expect_actions.py  fixtures.py  parse_key_val_lines.py  run_cloud_sync.py  standard_accounts.py  test_features.py
(+9 files in other folders)
